fix color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,12 @@
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
-  --teal: #4f9fdc;
+  --teal: #4b58be;
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #4f9fdc;
+  --primary: #4b58be;
   --secondary: #2c3e50;
   --success: #28a745;
   --info: #17a2b8;
@@ -168,7 +168,7 @@ sup {
 }
 
 a {
-  color: #4f9fdc;
+  color: #4b58be;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2637,32 +2637,32 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #4f9fdc;
-  border-color: #4f9fdc;
+  background-color: #4b58be;
+  border-color: #4b58be;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #159a80;
-  border-color: #148f77;
+  background-color: #25308a;
+  border-color: #4b58be;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #159a80;
-  border-color: #148f77;
+  background-color: #25308a;
+  border-color: #4b58be;
   box-shadow: 0 0 0 0.2rem rgba(60, 198, 171, 0.5);
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #4f9fdc;
-  border-color: #4f9fdc;
+  background-color: #4b58be;
+  border-color: #4b58be;
 }
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #148f77;
+  background-color: #25308a;
   border-color: #12846e;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus,
@@ -2924,13 +2924,13 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #4f9fdc;
-  border-color: #4f9fdc;
+  color: #4b58be;
+  border-color: #4b58be;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #4f9fdc;
-  border-color: #4f9fdc;
+  background-color: #4b58be;
+  border-color: #4b58be;
 }
 .btn-outline-primary:focus,
 .btn-outline-primary.focus {
@@ -2938,15 +2938,15 @@ fieldset:disabled a.btn {
 }
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #4f9fdc;
+  color: #4b58be;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #4f9fdc;
-  border-color: #4f9fdc;
+  background-color: #4b58be;
+  border-color: #4b58be;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -3173,7 +3173,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #4f9fdc;
+  color: #4b58be;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -3459,7 +3459,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
 }
 .dropdown-item.disabled,
 .dropdown-item:disabled {
@@ -3799,8 +3799,8 @@ input[type="button"].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #4f9fdc;
-  background-color: #4f9fdc;
+  border-color: #4b58be;
+  background-color: #4b58be;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
@@ -3859,8 +3859,8 @@ input[type="button"].btn-block {
 .custom-checkbox
   .custom-control-input:indeterminate
   ~ .custom-control-label::before {
-  border-color: #4f9fdc;
-  background-color: #4f9fdc;
+  border-color: #4b58be;
+  background-color: #4b58be;
 }
 .custom-checkbox
   .custom-control-input:indeterminate
@@ -4077,7 +4077,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out,
@@ -4108,7 +4108,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out,
@@ -4142,7 +4142,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out,
@@ -4268,7 +4268,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
 }
 
 .nav-fill .nav-item {
@@ -4920,7 +4920,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -0.125rem;
   line-height: 1.25;
-  color: #4f9fdc;
+  color: #4b58be;
   background-color: #fff;
   border: 0.125rem solid #dee2e6;
 }
@@ -4949,8 +4949,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #4f9fdc;
-  border-color: #4f9fdc;
+  background-color: #4b58be;
+  border-color: #4b58be;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5028,12 +5028,12 @@ a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
 }
 a.badge-primary:hover,
 a.badge-primary:focus {
   color: #fff;
-  background-color: #148f77;
+  background-color: #25308a;
 }
 a.badge-primary:focus,
 a.badge-primary.focus {
@@ -5322,7 +5322,7 @@ a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5414,8 +5414,8 @@ a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #4f9fdc;
-  border-color: #4f9fdc;
+  background-color: #4b58be;
+  border-color: #4b58be;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6489,14 +6489,14 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #4f9fdc !important;
+  background-color: #4b58be !important;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #148f77 !important;
+  background-color: #25308a !important;
 }
 
 .bg-secondary {
@@ -10502,14 +10502,14 @@ a.text-dark:focus {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #4f9fdc;
+  color: #4b58be;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:active,
 #mainNav .navbar-nav li.nav-item a.nav-link:focus {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #4f9fdc;
+  color: #4b58be;
 }
 #mainNav .navbar-toggler {
   font-size: 80%;
@@ -10531,13 +10531,13 @@ a.text-dark:focus {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #4f9fdc;
+    background: #4b58be;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active,
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus,
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #4f9fdc;
+    background: #4b58be;
   }
 
   #mainNav.navbar-shrink {
@@ -10590,11 +10590,11 @@ a.text-dark:focus {
   left: 0;
   transition: all 0.2s ease-in-out;
   opacity: 0;
-  background-color: #4f9fdc;
+  background-color: #4b58be;
 }
 
 .btn-link {
-  background-color: #4f9fdc;
+  background-color: #4b58be;
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
@@ -10624,7 +10624,7 @@ a.text-dark:focus {
   top: 1rem;
   font-size: 3rem;
   line-height: 3rem;
-  color: #4f9fdc;
+  color: #4b58be;
   opacity: 1;
 }
 
@@ -10667,7 +10667,7 @@ a.text-dark:focus {
 }
 
 .floating-label-form-group-with-focus label {
-  color: #4f9fdc;
+  color: #4b58be;
 }
 
 form .row:first-child .floating-label-form-group {
